<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_comercializadora"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_del_norte"
            android:textColor="@color/verde_principal"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/gris_fondo_tarjeta"
        app:cardCornerRadius="24dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/ll_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:hintEnabled="false"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/gris_input"
                app:boxCornerRadiusBottomEnd="50dp"
                app:boxCornerRadiusBottomStart="50dp"
                app:boxCornerRadiusTopEnd="50dp"
                app:boxCornerRadiusTopStart="50dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="18dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_usuario"
                    android:inputType="text"
                    android:textColorHint="@color/gris_texto"
                    android:padding="0dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilcontrasena"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:hintEnabled="false"
                app:boxBackgroundMode="filled"
                app:boxBackgroundColor="@color/gris_input"
                app:boxCornerRadiusBottomEnd="50dp"
                app:boxCornerRadiusBottomStart="50dp"
                app:boxCornerRadiusTopEnd="50dp"
                app:boxCornerRadiusTopStart="50dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_invisible"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_contrasena"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_contrasena"
                    android:inputType="textPassword"
                    android:textColorHint="@color/gris_texto"
                    android:padding="0dp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_olvide_contrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:text="@string/olvide_contrasena"
                android:textColor="@color/verde_principal"
                android:textSize="12sp"
                android:textStyle="bold"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/azul_oscuro"
                android:text="@string/boton_iniciar_sesion"
                android:textColor="@color/white"
                app:cornerRadius="30dp"
                android:layout_marginBottom="22dp"
                />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>